--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".constr"
+            android:name=".InfoActivity"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait"/>
         <activity
